--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="/css/dom.css" type="text/css" /> 
-    <title>Dominion Alpha 0.2</title>
+    <title>Dominion Alpha 0.3</title>
 	<script src="/scripts/jquery-1.4.2.min.js" type="text/javascript"></script>
 	<script src="/scripts/jquery-ui-1.8.2.custom.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="/scripts/coredisplay.js"></script>
@@ -34,7 +34,7 @@
 		<div id="play">
 			<div class="info">
 				<h2>Play</h2>
-				<div id="playstatus"></div>
+				<div id="playstatus">Status :</div>
 			</div>
 			<div id="playedcards"></div>
 		</div>
