--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="/scripts/dom.js"></script>
     <script type="text/javascript" src="/scripts/chat.js"></script>
     <script type="text/javascript" src="/scripts/attackresponse.js"></script>
+    <script type="text/javascript" src="/scripts/jquery.flyout.js"></script>
 </head>
 <body>
 		<div id="supply">
