--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -6,46 +6,13 @@
     <title>Dominion Alpha 0.6</title>
 	<script src="/scripts/jquery-1.4.2.min.js" type="text/javascript"></script>
 	<script src="/scripts/jquery-ui-1.8.2.custom.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="/scripts/coredisplay.js"></script>
-    <script type="text/javascript" src="/scripts/dom.js"></script>
+	<script type="text/javascript" src="/scripts/gamedisplay.js"></script>
+    <script type="text/javascript" src="/scripts/gameMessages.js"></script>
     <script type="text/javascript" src="/scripts/chat.js"></script>
+    <script type="text/javascript" src="/scripts/dom.js"></script>
     <script type="text/javascript" src="/scripts/jquery.flyout.js"></script>
 </head>
 <body>
-		<div id="supply">
-			
-		</div>
-		<div id="chat">
-			<div id="chatdisplay"></div>
-			<section id="chatname" contenteditable="true"></section>
-			<form onsubmit="sendChatMessage(); return false;" id="messageform">
-	    		<input  type="text" id="message-box">
-			</form>
-		</div>
-		<div id="discard">
-			<div class="info">
-				<h2>Discard</h2>
-			</div>
-		</div>
-		<div id="play">
-			<div class="info">
-				<h2>Play</h2>
-				<div id="playstatus">Status :</div>
-			</div>
-			<div id="playedcards"></div>
-		</div>
-		<div id="hand">
-			
-		</div>
-		<div id="trash">
-			<div class="info">
-				<h2>Trash</h2>
-			</div>
-		</div>
-		<div id="control">
-			<h3>Control</h3>
-			<p>Player List:</p>
-			<ul id="playerstatus"></ul>
-		</div>
+		
 </body>
 </html>
