--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -6,6 +6,7 @@
     <title>Dominion Alpha 0.6</title>
 	<script src="/scripts/jquery-1.4.2.min.js" type="text/javascript"></script>
 	<script src="/scripts/jquery-ui-1.8.2.custom.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="/scripts/lobby.js"></script>
 	<script type="text/javascript" src="/scripts/gamedisplay.js"></script>
     <script type="text/javascript" src="/scripts/gameMessages.js"></script>
     <script type="text/javascript" src="/scripts/chat.js"></script>
@@ -13,6 +14,6 @@
     <script type="text/javascript" src="/scripts/jquery.flyout.js"></script>
 </head>
 <body>
-		
+	<div id="container"></div>
 </body>
 </html>
