--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="/css/dom.css" type="text/css" /> 
+    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
     <title>Dominion Alpha 0.6</title>
 	<script src="/scripts/jquery-1.4.2.min.js" type="text/javascript"></script>
 	<script src="/scripts/jquery-ui-1.8.2.custom.min.js" type="text/javascript"></script>
