Adding bot selection, and a ping keepalive

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -13,6 +13,9 @@
     <script type="text/javascript" src="/scripts/chat.js"></script>
     <script type="text/javascript" src="/scripts/dom.js"></script>
     <script type="text/javascript" src="/scripts/jquery.flyout.js"></script>
+    <script type="text/javascript" src="/scripts/ui.multiselect.js"></script>
+    <script type="text/javascript" src="/scripts/jquery.scrollTo-min.js"></script> 
+    
 </head>
 <body>
 	<div id="container"></div>
